--- a/WebSite/css/index.css
+++ b/WebSite/css/index.css
@@ -1,3 +1,6 @@
+body{
+    padding: 0;
+}
 .section-style2{
     padding: 0rem 0rem 1rem 2em;
     margin: 1rem;
@@ -13,12 +16,10 @@
     padding: 0px;
     max-width: 100%;
     position: relative;
-    left: 0.5%;
+    left: 1rem;
 }
 .carousel {
     position: relative;
-    /*box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);*/
-    margin: 26px 0;
 }
 
 .carousel-inner {
@@ -121,9 +122,29 @@
 }
 .largeCarouselButton
 {
-    font-size: larger;
-    font-weight: bold;
-    padding: 1.5em 2em;
+    text-transform: uppercase;
     bottom: 20%;
-    margin: 0 5em;
+    padding: 1em 1em;
+    margin: 0 4em;
+}
+
+@media (min-width: 23.4375em)
+{
+    .largeCarouselButton
+    {
+        text-transform: uppercase;
+        bottom: 20%;
+        padding: 1em 1em;
+        margin: 0 5em;
+    }
+}
+
+@media (min-width: 27.75em)
+{
+    .largeCarouselButton{
+        font-size: larger;
+        font-weight: bold;
+        padding: 1.5em 2em;
+        margin: 0 5em;
+    }
 }
